# aizo1

./: CMakeLists.txt  szacowanie czasow.ods
analiza/: main.py
analiza/wyniki/: binaryInsertionSortf.csv  binaryInsertionSorti.csv  heapSortf.csv  heapSorti.csv  insertionSortf.csv  insertionSorti.csv  quickSortf.csv  quickSorti.csv
src/: main.cpp
src/czas/: Czas.cpp  Czas.h
src/sortingAlgorithms/: BinaryInsertionSort.cpp  BinaryInsertionSort.h  HeapSort.cpp  HeapSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h  ShellSort.cpp  ShellSort.h
src/structures/: Heap.cpp  Heap.h  Table.cpp  Table.h
src/table/: Table.cpp  Table.h
src/tests/: AutoTest.cpp  AutoTest.h  ManualTest.cpp  ManualTest.h
src/testy/: TestyAutomatyczne.cpp  TestyAutomatyczne.h  TestyManualne.cpp  TestyManualne.h
src/time/: Czas.cpp  Czas.h  Time.cpp  Time.h
